After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 580411 - get gnome-session to honour SmRestartStyleHint of SmRestartNever
get gnome-session to honour SmRestartStyleHint of SmRestartNever
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: gnome-session
2.26.x
Other All
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-04-27 10:13 UTC by Caolan McNamara
Modified: 2009-07-14 23:49 UTC
See Also:
GNOME target: ---
GNOME version: 2.25/2.26


Attachments
a potential patch (1.57 KB, patch)
2009-04-27 10:14 UTC, Caolan McNamara
committed Details | Review

Description Caolan McNamara 2009-04-27 10:13:51 UTC
Please describe the problem:
i.e. SmRestartNever style specifies that the client does not wish to be restarted in the next session. So ideally don't create a launcher for it for the next session

Steps to reproduce:


Actual results:


Expected results:


Does this happen every time?


Other information:
Comment 1 Caolan McNamara 2009-04-27 10:14:56 UTC
Created attachment 133403 [details] [review]
a potential patch

Looking at what currently happens this should do the right thing, seems to work fine for me anyway
Comment 2 Lucas Rocha 2009-07-14 23:49:04 UTC
Commited in master. Thanks!