[gsm] Honour the SmRestartNever SmRestartStyleHint

http://bugzilla.gnome.org/show_bug.cgi?id=580411